---
source: crates/snapshot-tests/tests/parser.rs
expression: combined
---
error[InvalidInteger]: invalid integer: leading zeros are not allowed at `a`
  ┌─ two_zeros:1:5
  │
1 │ a = 00
  │     ^^ invalid integer: leading zeros are not allowed


error: invalid integer: leading zeros are not allowed at `a`
 --> two_zeros:1:5
  |
1 | a = 00
  |     ^^ invalid integer: leading zeros are not allowed
Error {
    kind: "InvalidInteger",
    message: "invalid integer: leading zeros are not allowed",
    span: 4..6,
    path: Some(
        "a",
    ),
}
